# DockerForge

./: README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: app.js  index.html  styles.css
src/dockerforge/: __init__.py  cli.py
src/dockerforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dockerforge/core/: analyzer.py  generator.py  orchestrator.py  tracer.py
src/dockerforge/remediation/: patcher.py  patterns.py
src/dockerforge/utils/: logger.py
tests/: test_analyzer.py  test_generator.py  test_patcher.py
