[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerforge"
version = "0.1.0"
description = "Deep Analyzer Engine and Auto Remediation Loop prototype"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DockerForge" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
dockerforge = "dockerforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
